feat: Add 3 new languages (IT/ID/KO) and 4 color themes with dynamic theme integration Languages: - Added Italian (app_it.arb), Indonesian (app_id.arb), Korean (app_ko.arb) - Added colorScheme translation key to all 13 language files - Fixed duplicate manageWallets key in app_en.arb Color Themes: - Created ColorTheme class with 4 themes: Elite, Ocean, Forest, Rose - Added color_theme_provider.dart with currentColorThemeProvider - Added colorSchemeProvider to settings_provider.dart for persistence - Added color scheme picker dialog in settings Dynamic Theme Integration: - Updated main.dart to use colorTheme for ThemeData colors - Updated main_shell.dart - nav items and + button use dynamic colors - Updated dashboard_view.dart - header and balance card use colorTheme - Updated settings_view.dart - profile card uses colorTheme UI Fixes: - Made theme and color scheme dialogs scrollable with maxHeight constraints - Fixed dark mode handle color in dialogs

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "لم يتم العثور على فئة",
     "walletNotFound": "لم يتم العثور على محفظة",
     "errorWithDetails": "خطأ: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "خطأ في اتصال الشبكة. يرجى التحقق من الإنترنت.",
     "appearance": "المظهر",
     "theme": "السمة",
@@ -84,6 +90,7 @@
     "system": "النظام",
     "selectTheme": "اختر السمة",
     "selectLanguage": "اختر اللغة",
+    "colorScheme": "نظام الألوان",
     "account": "الحساب",
     "signOut": "تسجيل الخروج",
     "signOutConfirm": "هل تريد تسجيل الخروج؟",
@@ -122,6 +129,29 @@
     "cat_investment": "استثمار",
     "cat_gift": "هدية",
     "cat_other": "أخرى",
+    "cat_pets": "حيوانات أليفة",
+    "cat_groceries": "بقالة",
+    "cat_electronics": "إلكترونيات",
+    "cat_charity": "صدقة",
+    "cat_insurance": "تأمين",
+    "cat_gym": "رياضة",
+    "cat_travel": "سفر",
+    "statisticsTitle": "نظرة عامة على الإحصائيات",
+    "periodFilter": "الفترة",
+    "allTime": "كل الأوقات",
+    "last7Days": "آخر 7 أيام",
+    "last30Days": "آخر 30 يوم",
+    "averageDailySpending": "متوسط الإنفاق اليومي",
+    "totalTransactions": "إجمالي المعاملات",
+    "incomeCount": "عدد الدخل",
+    "expenseCount": "عدد المصروفات",
+    "topCategories": "أعلى الفئات",
+    "savingsRate": "معدل التوفير",
+    "biggestIncome": "أكبر دخل",
+    "biggestExpense": "أكبر مصروف",
+    "noData": "لا توجد بيانات لهذه الفترة",
+    "spendingTrend": "اتجاه الإنفاق",
+    "incomeVsExpense": "الدخل مقابل المصروف",
     "loginTab": "تسجيل الدخول",
     "registerTab": "تسجيل",
     "tagline": "حريتك المالية بين يديك",
