--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "Kategorie nicht gefunden",
     "walletNotFound": "Geldbörse nicht gefunden",
     "errorWithDetails": "Fehler: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "Netzwerkverbindungsfehler. Bitte überprüfen Sie Ihr Internet.",
     "appearance": "Erscheinungsbild",
     "theme": "Thema",
@@ -84,6 +90,7 @@
     "system": "System",
     "selectTheme": "Thema wählen",
     "selectLanguage": "Sprache wählen",
+    "colorScheme": "Farbschema",
     "account": "Konto",
     "signOut": "Abmelden",
     "signOutConfirm": "Abmelden?",
@@ -122,6 +129,29 @@
     "cat_investment": "Investition",
     "cat_gift": "Geschenk",
     "cat_other": "Sonstiges",
+    "cat_pets": "Haustiere",
+    "cat_groceries": "Lebensmittel",
+    "cat_electronics": "Elektronik",
+    "cat_charity": "Spenden",
+    "cat_insurance": "Versicherung",
+    "cat_gym": "Fitnessstudio",
+    "cat_travel": "Reisen",
+    "statisticsTitle": "Statistikübersicht",
+    "periodFilter": "Zeitraum",
+    "allTime": "Gesamt",
+    "last7Days": "Letzte 7 Tage",
+    "last30Days": "Letzte 30 Tage",
+    "averageDailySpending": "Durchschn. Tagesausgaben",
+    "totalTransactions": "Gesamttransaktionen",
+    "incomeCount": "Einkommensanzahl",
+    "expenseCount": "Ausgabenanzahl",
+    "topCategories": "Top-Kategorien",
+    "savingsRate": "Sparquote",
+    "biggestIncome": "Größtes Einkommen",
+    "biggestExpense": "Größte Ausgabe",
+    "noData": "Keine Daten für diesen Zeitraum",
+    "spendingTrend": "Ausgabentrend",
+    "incomeVsExpense": "Einkommen vs Ausgaben",
     "loginTab": "Anmelden",
     "registerTab": "Registrieren",
     "tagline": "Ihre finanzielle Freiheit, in Ihren Händen",
