--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "Catégorie non trouvée",
     "walletNotFound": "Portefeuille non trouvé",
     "errorWithDetails": "Erreur: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "Erreur de connexion réseau. Veuillez vérifier votre internet.",
     "appearance": "Apparence",
     "theme": "Thème",
@@ -84,6 +90,7 @@
     "system": "Système",
     "selectTheme": "Choisir Thème",
     "selectLanguage": "Choisir Langue",
+    "colorScheme": "Schéma de Couleur",
     "account": "Compte",
     "signOut": "Déconnexion",
     "signOutConfirm": "Se déconnecter?",
@@ -122,6 +129,29 @@
     "cat_investment": "Investissement",
     "cat_gift": "Cadeau",
     "cat_other": "Autre",
+    "cat_pets": "Animaux",
+    "cat_groceries": "Épicerie",
+    "cat_electronics": "Électronique",
+    "cat_charity": "Don",
+    "cat_insurance": "Assurance",
+    "cat_gym": "Sport",
+    "cat_travel": "Voyage",
+    "statisticsTitle": "Aperçu des Statistiques",
+    "periodFilter": "Période",
+    "allTime": "Tout le temps",
+    "last7Days": "7 derniers jours",
+    "last30Days": "30 derniers jours",
+    "averageDailySpending": "Dépense quotidienne moy.",
+    "totalTransactions": "Total des transactions",
+    "incomeCount": "Nombre de revenus",
+    "expenseCount": "Nombre de dépenses",
+    "topCategories": "Top catégories",
+    "savingsRate": "Taux d'épargne",
+    "biggestIncome": "Plus grand revenu",
+    "biggestExpense": "Plus grande dépense",
+    "noData": "Pas de données pour cette période",
+    "spendingTrend": "Tendance des dépenses",
+    "incomeVsExpense": "Revenus vs Dépenses",
     "loginTab": "Connexion",
     "registerTab": "Inscription",
     "tagline": "Votre liberté financière, entre vos mains",
