--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "カテゴリが見つかりません",
     "walletNotFound": "ウォレットが見つかりません",
     "errorWithDetails": "エラー: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "ネットワーク接続エラー。インターネットを確認してください。",
     "appearance": "外観",
     "theme": "テーマ",
@@ -84,6 +90,7 @@
     "system": "システム",
     "selectTheme": "テーマを選択",
     "selectLanguage": "言語を選択",
+    "colorScheme": "カラースキーム",
     "account": "アカウント",
     "signOut": "ログアウト",
     "signOutConfirm": "ログアウトしますか？",
@@ -122,6 +129,29 @@
     "cat_investment": "投資",
     "cat_gift": "贈り物",
     "cat_other": "その他",
+    "cat_pets": "ペット",
+    "cat_groceries": "食料品",
+    "cat_electronics": "電子機器",
+    "cat_charity": "寄付",
+    "cat_insurance": "保険",
+    "cat_gym": "ジム",
+    "cat_travel": "旅行",
+    "statisticsTitle": "統計概要",
+    "periodFilter": "期間",
+    "allTime": "全期間",
+    "last7Days": "過去7日間",
+    "last30Days": "過去30日間",
+    "averageDailySpending": "1日平均支出",
+    "totalTransactions": "総取引数",
+    "incomeCount": "収入回数",
+    "expenseCount": "支出回数",
+    "topCategories": "上位カテゴリ",
+    "savingsRate": "貯蓄率",
+    "biggestIncome": "最大収入",
+    "biggestExpense": "最大支出",
+    "noData": "この期間のデータはありません",
+    "spendingTrend": "支出傾向",
+    "incomeVsExpense": "収入 vs 支出",
     "loginTab": "ログイン",
     "registerTab": "登録",
     "tagline": "あなたの経済的自由を、手のひらに",
