--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "Categoria não encontrada",
     "walletNotFound": "Carteira não encontrada",
     "errorWithDetails": "Erro: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "Erro de conexão de rede. Verifique sua internet.",
     "appearance": "Aparência",
     "theme": "Tema",
@@ -84,6 +90,7 @@
     "system": "Sistema",
     "selectTheme": "Selecionar Tema",
     "selectLanguage": "Selecionar Idioma",
+    "colorScheme": "Esquema de Cores",
     "account": "Conta",
     "signOut": "Sair",
     "signOutConfirm": "Tem certeza que deseja sair?",
@@ -122,6 +129,29 @@
     "cat_investment": "Investimento",
     "cat_gift": "Presente",
     "cat_other": "Outros",
+    "cat_pets": "Animais",
+    "cat_groceries": "Supermercado",
+    "cat_electronics": "Eletrônicos",
+    "cat_charity": "Caridade",
+    "cat_insurance": "Seguro",
+    "cat_gym": "Academia",
+    "cat_travel": "Viagem",
+    "statisticsTitle": "Visão Geral de Estatísticas",
+    "periodFilter": "Período",
+    "allTime": "Todo o tempo",
+    "last7Days": "Últimos 7 dias",
+    "last30Days": "Últimos 30 dias",
+    "averageDailySpending": "Gasto diário médio",
+    "totalTransactions": "Total de transações",
+    "incomeCount": "Quantidade de receitas",
+    "expenseCount": "Quantidade de despesas",
+    "topCategories": "Principais categorias",
+    "savingsRate": "Taxa de poupança",
+    "biggestIncome": "Maior receita",
+    "biggestExpense": "Maior despesa",
+    "noData": "Sem dados para este período",
+    "spendingTrend": "Tendência de gastos",
+    "incomeVsExpense": "Receitas vs Despesas",
     "loginTab": "Entrar",
     "registerTab": "Registrar",
     "tagline": "Sua liberdade financeira, nas suas mãos",
