--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "Категория не найдена",
     "walletNotFound": "Кошелек не найден",
     "errorWithDetails": "Ошибка: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "Ошибка сетевого соединения. Пожалуйста, проверьте интернет.",
     "appearance": "Внешний вид",
     "theme": "Тема",
@@ -84,6 +90,7 @@
     "system": "Системная",
     "selectTheme": "Выберите тему",
     "selectLanguage": "Выберите язык",
+    "colorScheme": "Цветовая схема",
     "account": "Аккаунт",
     "signOut": "Выйти",
     "signOutConfirm": "Вы уверены, что хотите выйти?",
@@ -122,6 +129,29 @@
     "cat_investment": "Инвестиции",
     "cat_gift": "Подарок",
     "cat_other": "Прочее",
+    "cat_pets": "Питомцы",
+    "cat_groceries": "Продукты",
+    "cat_electronics": "Электроника",
+    "cat_charity": "Благотворительность",
+    "cat_insurance": "Страхование",
+    "cat_gym": "Спортзал",
+    "cat_travel": "Путешествия",
+    "statisticsTitle": "Обзор статистики",
+    "periodFilter": "Период",
+    "allTime": "Все время",
+    "last7Days": "Последние 7 дней",
+    "last30Days": "Последние 30 дней",
+    "averageDailySpending": "Средний расход в день",
+    "totalTransactions": "Всего транзакций",
+    "incomeCount": "Количество доходов",
+    "expenseCount": "Количество расходов",
+    "topCategories": "Топ категорий",
+    "savingsRate": "Норма сбережений",
+    "biggestIncome": "Самый большой доход",
+    "biggestExpense": "Самый большой расход",
+    "noData": "Нет данных за этот период",
+    "spendingTrend": "Тренд расходов",
+    "incomeVsExpense": "Доходы vs Расходы",
     "loginTab": "Вход",
     "registerTab": "Регистрация",
     "tagline": "Ваша финансовая свобода в ваших руках",
