--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -74,7 +74,13 @@
     "categoryNotFound": "未找到分类",
     "walletNotFound": "未找到钱包",
     "errorWithDetails": "错误: {details}",
-    "@errorWithDetails": { "placeholders": { "details": { "type": "String" } } },
+    "@errorWithDetails": {
+        "placeholders": {
+            "details": {
+                "type": "String"
+            }
+        }
+    },
     "networkError": "网络连接错误。请检查您的网络。",
     "appearance": "外观",
     "theme": "主题",
@@ -84,6 +90,7 @@
     "system": "系统",
     "selectTheme": "选择主题",
     "selectLanguage": "选择语言",
+    "colorScheme": "配色方案",
     "account": "账户",
     "signOut": "登出",
     "signOutConfirm": "确定要登出吗？",
@@ -122,6 +129,29 @@
     "cat_investment": "投资",
     "cat_gift": "礼物",
     "cat_other": "其他",
+    "cat_pets": "宠物",
+    "cat_groceries": "杂货",
+    "cat_electronics": "电子产品",
+    "cat_charity": "慈善",
+    "cat_insurance": "保险",
+    "cat_gym": "健身",
+    "cat_travel": "旅行",
+    "statisticsTitle": "统计概览",
+    "periodFilter": "时期",
+    "allTime": "全部时间",
+    "last7Days": "过去7天",
+    "last30Days": "过去30天",
+    "averageDailySpending": "日均支出",
+    "totalTransactions": "总交易数",
+    "incomeCount": "收入次数",
+    "expenseCount": "支出次数",
+    "topCategories": "热门分类",
+    "savingsRate": "储蓄率",
+    "biggestIncome": "最大收入",
+    "biggestExpense": "最大支出",
+    "noData": "此期间无数据",
+    "spendingTrend": "支出趋势",
+    "incomeVsExpense": "收入 vs 支出",
     "loginTab": "登录",
     "registerTab": "注册",
     "tagline": "您的财务自由，尽在掌握",
